fixed readablity of text in badge

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -71,6 +71,7 @@ a.user {
 }
 .badge {
   background-color: var(--color-red);
+  border: none;
 }
 .badge-md {
   width: 1.2rem;
